--- a/assets/system_config/config/i3/config
+++ b/assets/system_config/config/i3/config
@@ -18,25 +18,25 @@
 
 
 #### MIZOS CONFIG SETTINGS, DONT TOUCH UNLESS YOU KNOW WHAT YOU ARE DOING.
-set $mod `exec cat /var/mizOS/config/i3/settings/mod-key`
+exec --no-startup-id mod=$(/var/mizOS/config/i3/settings/mod)
 
-set $bar-color `exec cat /var/mizOS/config/i3/settings/bar-color`
-set $bar-position `exec cat /var/mizOS/config/i3/settings/bar-position`
+exec --no-startup-id bar-color=$(/var/mizOS/config/i3/settings/bar-color)
+exec --no-startup-id bar-position=$(/var/mizOS/config/i3/settings/bar-position)
 
-set $border-color1 `exec cat /var/mizOS/config/i3/settings/border-color1`
-set $border-color2 `exec cat /var/mizOS/config/i3/settings/border-color2`
-set $border-color3 `exec cat /var/mizOS/config/i3/settings/border-color3`
-set $border-size `exec cat /var/mizOS/config/i3/settings/border-size`
+exec --no-startup-id border-color1=$(/var/mizOS/config/i3/settings/border-color1)
+exec --no-startup-id border-color2=$(/var/mizOS/config/i3/settings/border-color2)
+exec --no-startup-id border-color3=$(/var/mizOS/config/i3/settings/border-color3)
+exec --no-startup-id border-size=$(/var/mizOS/config/i3/settings/border-size)
 
-set $gaps-inner `exec cat /var/mizOS/config/i3/settings/gaps-inner`
-set $gaps-outer `exec cat /var/mizOS/config/i3/settings/gaps-outer`
+exec --no-startup-id gaps-inner=$(/var/mizOS/config/i3/settings/gaps-inner)
+exec --no-startup-id gaps-outer=$(/var/mizOS/config/i3/settings/gaps-outer)
 
-set $ws-bg-color1 `exec cat /var/mizOS/config/i3/settings/ws-bg-color1`
-set $ws-bg-color2 `exec cat /var/mizOS/config/i3/settings/ws-bg-color2`
-set $ws-bg-color3 `exec cat /var/mizOS/config/i3/settings/ws-bg-color3`
-set $ws-txt-color1 `exec cat /var/mizOS/config/i3/settings/ws-txt-color1`
-set $ws-txt-color2 `exec cat /var/mizOS/config/i3/settings/ws-txt-color2`
-set $ws-txt-color3 `exec cat /var/mizOS/config/i3/settings/ws-txt-color3`
+exec --no-startup-id ws-bg-color1=$(/var/mizOS/config/i3/settings/ws-bg-color1)
+exec --no-startup-id ws-bg-color2=$(/var/mizOS/config/i3/settings/ws-bg-color2)
+exec --no-startup-id ws-bg-color3=$(/var/mizOS/config/i3/settings/ws-bg-color3)
+exec --no-startup-id ws-txt-color1=$(/var/mizOS/config/i3/settings/ws-txt-color1)
+exec --no-startup-id ws-txt-color2=$(/var/mizOS/config/i3/settings/ws-txt-color2)
+exec --no-startup-id ws-txt-color3=$(/var/mizOS/config/i3/settings/ws-txt-color3)
 
 
 
@@ -222,14 +222,14 @@ default_floating_border pixel $border-size
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	position $bar-position
+	position top_$bar-position
 	colors {
-	background $bar-color
+	background #${bar-color}
 	
-	focused_workspace $ws-bg-color1 $ws-bg-color1 $ws-txt-color1
-	active_workspace $ws-bg-color2 $ws-bg-color2 $ws-txt-color2
-	inactive_workspace $ws-bg-color2 $ws-bg-color2 $ws-txt-color2
-	urgent_workspace $ws-bg-color3 $ws-bg-color3 $ws-txt-color3
+	focused_workspace #${ws-bg-color1} #${ws-bg-color1} #${ws-txt-color1}
+	active_workspace #${ws-bg-color2} #${ws-bg-color2} #${ws-txt-color2}
+	inactive_workspace #${ws-bg-color2} #${ws-bg-color2} #${ws-txt-color3}
+	urgent_workspace #${ws-bg-color3} #${ws-bg-color3} #${ws-txt-color3}
 	}
 }
 exec feh --bg-fill --zoom fill /var/mizOS/config/wallpaper/wall*
@@ -238,10 +238,10 @@ gaps inner $gaps-inner
 gaps outer $gaps-outer
 
 
-client.focused $border-color1 #000000 #000000 $border-color1 $border-color1
-client.focused_inactive $border-color2 #000000 #000000 $border-color2 $border-color2
-client.unfocused $border-color2 #000000 #000000 $border-color2 $border-color2
-client.urgent $border-color3 #000000 #000000 $border-color3 $border-color3
+client.focused #${border-color1} #000000 #000000 #${border-color1} #${border-color1}
+client.focused_inactive #${border-color2} #000000 #000000 #${border-color2} #${border-color2}
+client.unfocused #${border-color2} #000000 #000000 #${border-color2} #${border-color2}
+client.urgent #${border-color3} #000000 #000000 #${border-color3} #${border-color3}
 
 bindsym $mod+shift+a exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 bindsym $mod+shift+m exec picom 
