--- a/assets/system_config/config/i3/config
+++ b/assets/system_config/config/i3/config
@@ -14,12 +14,14 @@
 
 
 
-
+set mod mod4
 
 
 #### MIZOS CONFIG SETTINGS, DONT TOUCH UNLESS YOU KNOW WHAT YOU ARE DOING.
-exec --no-startup-id export mod=$(cat /var/mizOS/config/i3/settings/mod-key)
+# exec --no-startup-id export mod=$(cat /var/mizOS/config/i3/settings/mod-key)
 
+
+set mod mod4
 
 
 exec --no-startup-id export bar_color=$(cat /var/mizOS/config/i3/settings/bar-color)
@@ -230,7 +232,7 @@ default_floating_border pixel $border_size
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	position $bar_position
+	position top
 	colors {
 	background #${bar_color:1}
 	
