--- a/assets/system_config/config/i3/config
+++ b/assets/system_config/config/i3/config
@@ -14,14 +14,14 @@
 
 
 
-set mod mod4
+set $mod Mod4
 
 
 #### MIZOS CONFIG SETTINGS, DONT TOUCH UNLESS YOU KNOW WHAT YOU ARE DOING.
 # exec --no-startup-id export mod=$(cat /var/mizOS/config/i3/settings/mod-key)
 
 
-set mod mod4
+set mod Mod4
 
 
 exec --no-startup-id export bar_color=$(cat /var/mizOS/config/i3/settings/bar-color)
@@ -226,8 +226,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-default_border pixel $border_size
-default_floating_border pixel $border_size
+default_border pixel ${border_size}
+default_floating_border pixel ${border_size}
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -244,8 +244,8 @@ bar {
 }
 exec feh --bg-fill --zoom fill /var/mizOS/config/wallpaper/wall*
 
-gaps inner ${gaps_inner}px
-gaps outer ${gaps_outer}px
+gaps inner "${gaps_inner}px"
+gaps outer "${gaps_outer}px"
 
 
 client.focused #${border_color1:1} #000000 #000000 #${border_color1:1} #${border_color1:1}
